--- a/index.html
+++ b/index.html
@@ -120,8 +120,22 @@
           <div class="col-lg-8 content">
             <h2>Desenvolvedor Java Spring &amp; Entusiasta de IA.</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Histórias sempre fizeram parte da minha vida. Através de altos e baixos, a leitura se tornou uma constante, e alguns livros me marcaram 
+              profundamente: Eragon, O Senhor dos Anéis, O Guia do Mochileiro das Galáxias, para citar alguns. Essas narrativas despertaram minha 
+              criatividade e me fizeram imaginar soluções mirabolantes, enxergando até onde uma simples ideia pode chegar. Talvez um visionário? 
+              Quem sabe.
+            </p>
+            <p class="fst-italic py-3">
+              Ao refletir sobre o mundo empresarial e o desenvolvimento de software, percebi que as empresas precisam adotar uma abordagem que aprendi 
+              muito bem na Física: experimentar. Seja no desenvolvimento de software ou em qualquer outra área da vida, é essencial testar hipóteses 
+              para verificar sua validade. Por isso, acredito que as empresas deveriam criar um ‘laboratório’ — um espaço para testar ideias em um 
+              ambiente controlado, aprender com elas, aprimorar e só depois decidir se merecem ir para produção.
+            </p>
+            <p class="fst-italic py-3">
+              Como nem sempre conseguimos transformar todas as nossas ideias em realidade, quero mostrar aos que estão ao meu redor que esse conceito 
+              de 'laboratório' é poderoso. E vou começar comigo mesmo. Tenho muitas ideias e, com o avanço dos grandes modelos de linguagem, colocá-las 
+              no papel ficou muito mais fácil. Por isso, farei dos meus estudos e projetos um laboratório vivo, onde poderei experimentar, aprender e 
+              me divertir implementando as soluções criativas que tenho acumulado ao longo dos anos.
             </p>
             <div class="row">
               <div class="col-lg-6">
