Descrição sobre os institutos

--- a/index.html
+++ b/index.html
@@ -296,8 +296,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Instituto Pesquisa</h2>
-        <p>Escrever Algo</p>
+        <h2>Instituto Pesquisa</h2>       
       </div>
       <!-- End Section Title -->
 
@@ -370,7 +369,12 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Instituto CrewAI</h2>
-        <p>Escrever Algo</p>
+        <p>
+          O CrewAI é um framework voltado para a criação e coordenação de agentes inteligentes 
+          que trabalham de maneira colaborativa para executar tarefas complexas. Ele é inspirado 
+          por arquiteturas de sistemas multiagentes (MAS), onde vários agentes com habilidades 
+          diferentes são projetados para atuar juntos, realizando tarefas de forma descentralizada 
+          ou centralizada.</p>
       </div>
       <!-- End Section Title -->
 
@@ -443,7 +447,12 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Instituto LangFlow</h2>
-        <p>Escrever Algo</p>
+        <p>
+          O LangFlow é uma ferramenta de interface visual projetada para facilitar a criação e o 
+          gerenciamento de pipelines de processamento de linguagem natural (NLP) e fluxos de 
+          trabalho que envolvem agentes inteligentes, usando o poder dos grandes modelos de 
+          linguagem, como os da família GPT.
+        </p>
       </div>
       <!-- End Section Title -->
 
